--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "webpack-spritesmith": "^0.5.2"
   },
   "jest": {
     "collectCoverageFrom": [
